@@ -14,15 +14,28 @@ DEFAULT_GROUP_NAMES = {
 }
 
 
+DEFAULT_GROUP_NAMES_SUBCOMMANDS = {
+    # We replace ArgumentGroup title (value) with alias (key).
+    "arguments:": [
+        'positional arguments',
+    ],
+    'options:': [
+        'optional arguments',
+        'options',
+    ]
+}
+
+
 class Manpage(object):
-    def __init__(self, parser):
+    def __init__(self, parser, format='pretty'):
         self.prog = parser.prog
         self.parser = parser
+        self.format = format
         if not getattr(parser, '_manpage', None):
             self.parser._manpage = []
 
         self.formatter = self.parser._get_formatter()
-        self.mf = _ManpageFormatter(self.prog, self.formatter)
+        self.mf = _ManpageFormatter(self.prog, self.formatter, format=self.format)
         self.synopsis = self.parser.format_usage().split(':')[-1].split()
         self.description = self.parser.description
 
@@ -89,15 +102,23 @@ def quoted(text):
 
 
 class _ManpageFormatter(HelpFormatter):
-    def __init__(self, prog, old_formatter):
+    def __init__(self, prog, old_formatter, format):
         super(HelpFormatter, self).__init__()
         self._prog = prog
         self.of = old_formatter
+        assert format in ("pretty", "single-commands-section")
+        self.format = format
 
     def _markup(self, text):
         if isinstance(text, str):
             return text.replace('-', r'\-')
         return text
+
+    @staticmethod
+    def _get_aliases_str(aliases):
+        if not aliases:
+            return ""
+        return " (" + ", ".join(aliases) + ")"
 
     def _format_action_invocation(self, action):
         if not action.option_strings:
@@ -121,7 +142,7 @@ class _ManpageFormatter(HelpFormatter):
                                             underline(args_string)))
         return ', '.join(parts)
 
-    def _format_parser(self, parser, subcommand=None):
+    def _format_parser(self, parser, subcommand=None, aliases=None, help=None):
         # The parser "tree" looks like
         # ----------------------------
         # Parser -> [ActionGroup, ActionGroup, ..]
@@ -132,9 +153,25 @@ class _ManpageFormatter(HelpFormatter):
 
         lines = []
         if subcommand:
-            first_line = ".SH COMMAND"
-            first_line += " " + underline(quoted(subcommand))
+            if self.format == "pretty":
+                # start a new section for each command
+                first_line = ".SH COMMAND"
+                first_line += " " + underline(quoted(subcommand))
+            elif self.format == "single-commands-section":
+                # do not start a new section, start subsection of COMMANDS instead
+                first_line = ".SS"
+                first_line += " " + bold(subcommand + self._get_aliases_str(aliases))
             lines.append(first_line)
+
+            if help:
+                if self.format == "pretty":
+                    # help is printed on top in the list of commands already
+                    pass
+                elif self.format == "single-commands-section":
+                    # print help
+                    lines.append(help)
+                    lines.append("")
+
             lines.append(parser.format_usage())
 
         if parser.description:
@@ -180,14 +217,30 @@ class _ManpageFormatter(HelpFormatter):
 
     def _format_subparsers(self, action_group, action, subcommand=None):
         lines = []
-        lines.append('.SH')
-        title = action_group.title.upper()
-        if subcommand:
-            title += " " + underline(quoted(subcommand))
-        lines.append(title)
 
-        lines.append(self._format_ag_subcommands(action._choices_actions,
-                     subcommand or self._prog))
+        if subcommand:
+            if self.format == "pretty":
+                # start a new section for each command
+                lines.append('.SH')
+                title = action_group.title.upper()
+                title += " " + underline(quoted(subcommand))
+                lines.append(title)
+            elif self.format == "single-commands-section":
+                # do not start a new section, append subsections to the COMMANDS section
+                pass
+        else:
+            # start a new section on top-level
+            lines.append('.SH')
+            title = action_group.title.upper()
+            lines.append(title)
+
+        if self.format == "pretty":
+            # print list of subcommands
+            lines.append(self._format_ag_subcommands(action._choices_actions,
+                         subcommand or self._prog))
+        elif self.format == "single-commands-section":
+            # skip printing list of subcommands
+            pass
 
         # gather (sub-)command aliases
         command_aliases = {}
@@ -199,12 +252,21 @@ class _ManpageFormatter(HelpFormatter):
                 command_aliases[command].append(name)
                 command_aliases_names.add(name)
 
+        command_help = {}
+        for i in action._choices_actions:
+            command_help[i.dest] = i.help
+
         for name, choice in action.choices.items():
             if name in command_aliases_names:
                 # don't print aliased commands multiple times
                 continue
             new_subcommand = "{} {}".format(subcommand or self._prog, name)
-            lines.extend(self._format_parser(choice, new_subcommand))
+            aliases = command_aliases[choice]
+            help = command_help.get(name, None)
+            if help == SUPPRESS:
+                # don't print hidden commands
+                continue
+            lines.extend(self._format_parser(choice, new_subcommand, aliases, help))
         return lines
 
     def _format_action_group(self, action_group, subcommand=None):
@@ -238,18 +300,41 @@ class _ManpageFormatter(HelpFormatter):
             return []
 
         title = action_group.title
-        for replace_with, defaults in DEFAULT_GROUP_NAMES.items():
+
+        group_names = DEFAULT_GROUP_NAMES
+        if subcommand:
+            if self.format == "pretty":
+                pass
+            elif self.format == "single-commands-section":
+                group_names = DEFAULT_GROUP_NAMES_SUBCOMMANDS
+
+        for replace_with, defaults in group_names.items():
             if title in defaults:
                 title = replace_with
-        if title:
-            title = title.upper()
-        if title and subcommand:
-            title += " " + underline(quoted(subcommand))
-        title = [] if not title else [".SH " + title]
+
+        if subcommand:
+            if self.format == "pretty":
+                title = title.upper() if title else ""
+                if title:
+                    title += " " + underline(quoted(subcommand))
+                title = [] if not title else [".SH " + title]
+            elif self.format == "single-commands-section":
+                title = [] if not title else [title]
+        else:
+            title = title.upper() if title else ""
+            title = [] if not title else [".SH " + title]
 
         description = []
         if action_group.description:
             description.append(self.format_text(action_group.description))
+
+        if subcommand:
+            if self.format == "pretty":
+                # don't indent the whole content of a subcommand
+                pass
+            elif self.format == "single-commands-section":
+                # indent the whole content of a subcommand
+                content = [".RS 7"] + content + [".RE"] + [""]
 
         return title + description + content
 
