@@ -1,0 +1,3 @@
+[build_manpages]
+manpages =
+    osc.1:module=osc.main:function=get_parser:format=single-commands-section:prog=osc:author=Contributors to the osc project. See the project's GIT history for the complete list.
